--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ SEO (Search Engine Opimisation), Blogging and Content Writing</p>
 				</div>
 				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
-						<img src="images/Office.jpg" class="img-responsive" alt="portfolio img">
+						<img src="images/office.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>3D Office Model with entire Dimentions and measurements in AUTO CAD</h4>
 								<h5>Creator : Tharunaditya Anuganti         copyrights &copy;2018</h5>
