--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ body {margin:0;height:2000px;}
 						<h4>DESIGNER &AMP; DEVELOPER</h4>
 						<p>I am a student started to pursue my bachelor of technology  in Computer science Engineering (Cyber Security). I have knowledge regarding Web development in front end designing using HTML, CSS and JavaScript. Python is my first programming language. I love technology and innovations so I love to read books regarding technology which made me a tech geek where I am able to speak about any kind of technical stuff with little preparation. 
  </p>
-						<p>I am also aware of the designing. I am learned Auto cad designer, Working with Photoshop for all kinds of editing made me some more strong in designing or editing the things. MS word, MS power point, MS Excel are the applications which are known for me in the field of data and its presentation. 
+						<p>I am also aware of the designing. I am learned Auto cad designer, Working with Photoshop for all kinds of editing made me some more strong in designing or editing the things. MS word, MS power point, MS Excel are the applications which are known to me in office tools and data representation. 
 A part of this I am aware of Digital marketing, Affiliate Marketing
 SEO (Search Engine Opimisation), Blogging and Content Writing</p>
 					</div>
